:bug: Fix Input suffix align issue (#23606)
close #23588

--- a/components/input/style/affix.less
+++ b/components/input/style/affix.less
@@ -7,20 +7,14 @@
   &-affix-wrapper {
     .input();
     display: inline-flex;
-    height: @input-height-base;
-    padding-top: 0;
-    padding-bottom: 0;
+    max-height: @input-height-base;
 
     &-lg {
-      height: @input-height-lg;
-      padding-top: 0;
-      padding-bottom: 0;
+      max-height: @input-height-lg;
     }
 
     &-sm {
-      height: @input-height-sm;
-      padding-top: 0;
-      padding-bottom: 0;
+      max-height: @input-height-sm;
     }
 
     &-disabled {
